<resources>
    <string name="app_name">Manikiuras</string>
    <string name="login_label_username">Prisijungimo vardas</string>
    <string name="login_label_password">Slaptažodis</string>
    <string name="login_label_logIn_button">Prisijungti</string>
    <string name="meniu_new_post_button">Naujas įrašas</string>
    <string name="meniu_search_button">Paieška</string>
    <string name="new_post_add_post">Pridėkite naują įrašą</string>
    <string name="search_write_search">Irašykite paiešką</string>
    <string name="login_register_button">Registruotis</string>
    <string name="register_username">Jūsų slapyvardis</string>
    <string name="register_password">Jūsų slaptažodis</string>
    <string name="register_repeat_password">Pakartokite slaptažodį</string>
    <string name="register_email">Įveskitę elektroninį paštą</string>
    <string name="register_register_button">Užregistruoti</string>
    <string name="naujas_irasas_vardas">Vardas, Pavarde</string>
    <string name="naujas_irasas_tipas">Tipas:</string>
    <string name="naujas_irasas_tipas_gelinis">gelinis</string>
    <string name="naujas_irasas_tipas_paprastas">paprastas</string>
    <string name="naujas_irasas_vieta">Vieta:</string>
    <string-array name="naujas_irasas_vieta_pasirinkti">
    <item>Salonas</item>
    <item>Namai</item>
    </string-array>
    <string name="naujas_irasas_papildomos">Papildomos paslaugos:</string>
    <string name="naujas_irasas_papildomos_reikalingos">Reikalingos</string>
    <string name="naujas_irasas_papildomos_nereikalingos">Nereikalingos</string>
    <string name="naujas_irasas_numeris">Telefono numeris:</string>
    <string name="naujas_irasas_mygtukas">Registruotis</string>
    <string name="login_invalid_username">Blogai ivestas vartotojo vardas</string>
    <string name="login_invalid_password">Blogai ivestas slaptazodis</string>
    <string name="operation_one_error">Butina ivesti duomenis</string>
    <string name="register_invalid_email">Blogai ivestas elektroninis pastas</string>
</resources>
