<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="6dp"
    android:layout_marginBottom="6dp"
    android:layout_marginLeft="6dp"
    android:layout_marginRight="6dp"
    tools:context="com.example.moksleivis.manikiuras.New_post">

    <ScrollView
        android:layout_width="368dp"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="368dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/logo" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/naujas_irasas_tipas" />
                    <RadioGroup
                        android:id="@+id/tipu_grupe"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <RadioButton
                            android:id="@+id/gelinis"
                            android:checked="true"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/naujas_irasas_tipas_gelinis"/>
                        <RadioButton
                            android:id="@+id/paprastas"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/naujas_irasas_tipas_paprastas"/>
                    </RadioGroup>

            <Space
                android:layout_width="match_parent"
                android:layout_height="12dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/naujas_irasas_vieta"/>

            <Spinner
                android:id="@+id/vieta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </Spinner>
            <Space
                android:layout_width="match_parent"
                android:layout_height="12dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/naujas_irasas_papildomos" />
            <RadioGroup
                android:id="@+id/papildomos_grupe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <RadioButton
                    android:id="@+id/reikalingos"
                    android:checked="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/naujas_irasas_papildomos_reikalingos"/>
                <RadioButton
                    android:id="@+id/nereikalingos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/naujas_irasas_papildomos_nereikalingos"/>
            </RadioGroup>

            <Space
                android:layout_width="match_parent"
                android:layout_height="12dp" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
